# switchenv

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst  toc.rst
docs/ref/: switchenv.rst
switchenv/: doit.py  experiment.py  switchenv.py
